# LAPrediction

./: .gitignore  Basic-Predictions.ipynb  Basic_pred.py  Features_Vulne.py  README.md  all_sites_features_vulne.sh  basic_pred_all_sites.sh  concat_pred.py  grkjhgklh.txt  pyproject.toml  test.mdr
.ipynb_checkpoints/: Basic-Predictions-checkpoint.ipynb
data/Output_Data/: Data_Test_With_Time_pred_Rates_30_Features_Number of Cells_BVE_10_11_23_27_30.csv  Data_Test_With_Time_pred_Rates_30_Features_Number of Cells_BVE_11_13_14_19_20.csv  Data_Test_With_Time_pred_Rates_30_Features_Number of Cells_BVE_13_14_15_16_28.csv  Data_Test_With_Time_pred_Rates_30_Features_Number of Cells_BVE_13_14_20_25_29.csv  Data_Test_With_Time_pred_Rates_30_Features_Number of Cells_BVE_13_16_19_22_30.csv  Data_Test_With_Time_pred_Rates_30_Features_Number of Cells_BVE_13_19_21_22_28.csv  (+116 more)
data_collection/: Experimentation_Results.csv  README.md  study_sites.txt
notebooks/: Approach.ipynb  Clustering.ipynb  CostPrediction.ipynb  DemoPrediction.ipynb  Depth Evol Graph.ipynb  Explore_Results.ipynb  Feature Importance.ipynb  FilePredInput_SubCatch.ipynb  GeomorphCritsFile.ipynb  Launch_All_Pred_Cluster_Sub.ipynb  PredByP.ipynb  PredictionByCluster.ipynb  PredictionWithSubCatch.ipynb  Site Profiles.ipynb  SmoothByRates.ipynb  TimePrediction.ipynb  Untitled.ipynb  ValidityPrediction.ipynb  clustering.py  concat_pred_cluster.py  helpers.py  predByCluster.py  prediction_of_H_indicator_with_subCatchmentData.py  visuals.py
src/: LearningModel.py  Main.py  Prediction.py  Subcatch.py  main.py
(+1073 files in other folders)
