[tool.poetry]
name = "laprediction"
version = "0.1.0"
description = "Prediction of the maximum rate used with Loop Aggregation."
authors = ["Jnsll <june.benvegnu-sallou@irisa.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
sklearn = "^0.0"
scikit-learn = "^0.23.2"
GDAL = "^3.2.0"
flopy = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
